@@ -29,37 +29,37 @@ public class AI extends Player
     public boolean playEffects(Player opponent)
     {
         // Prompt the player to choose a pokemon to attack
-
-        useEffects(opponent);
-
-        return true;
+        return useEffects(opponent);
     }
     @Override
-    public void useEffects(Player opponent)
+    public boolean useEffects(Player opponent)
     {
         for(PokemonWithPower p : getField().getPokemonsWithPower())
         {
+            if(p.getEffect().getTargetType() == TargetType.ENEMY && opponent.getField().isEmpty()) return false;
             if(!p.getEffect().isUsed())
             {
-                if(p.getEffect().getTargetType() == TargetType.ENEMY)
+                if(p.getEffect().getTargetType() == TargetType.ENEMY && !opponent.getField().getPokemons().isEmpty())
                 {
                     Pokemon enemyPokemon = getOpponentPokemon(p, opponent.getField().getPokemons());
                     p.getEffect().activate(enemyPokemon);
                 }
-                else if(p.getEffect().getTargetType() == TargetType.ALLY)
+                else if(p.getEffect().getTargetType() == TargetType.ALLY )
                 {
                     Pokemon allyPokemon = getField().getPokemons().get(0);
                     p.getEffect().activate(allyPokemon);
                 }
-                else if (p.getEffect().getTargetType() == TargetType.BOTH)
+                else if (p.getEffect().getTargetType() == TargetType.BOTH && !opponent.getField().getPokemons().isEmpty())
                 {
                     Pokemon enemyPokemon = getOpponentPokemon(p, opponent.getField().getPokemons());
                     p.getEffect().activate(enemyPokemon);
                     Pokemon allyPokemon = getField().getPokemons().get(0);
                     p.getEffect().activate(allyPokemon);
                 }
+                killDeadPokemons(opponent);
             }
         }
+        return true;
     }
     @Override
     public void attack(Player opponent)
@@ -96,30 +96,6 @@ public class AI extends Player
     }
     public Pokemon getOpponentPokemon(Pokemon pokemon,ArrayList<Pokemon> pokemons)
     {
-        // Pokemon enemyPokemonFound = null;
-        // for(Pokemon enemyPokemon : pokemons)
-        // {
-        //     //attaque le pokémon dont l'affinité lui donne l'avantage
-        //     if(pokemon.isStrongTo(enemyPokemon.getAffinity()))
-        //     {
-        //         enemyPokemonFound = enemyPokemon;
-        //     }
-        //     //attaque le pokémon dont l'affinité lui donne l'avantage et qui a le moins de points de vie
-        //     if(pokemon.isStrongTo(enemyPokemon.getAffinity()) && enemyPokemon.getHP() < enemyPokemonFound.getHP()) enemyPokemonFound = enemyPokemon;
-        //     //attaque l'un de ces Pokémons au hasard
-        //     if(enemyPokemonFound == null)
-        //     {
-
-        //     }
-
-        // }
-        // return null;
-        // 
-        // Un Pokémon de l'ordinateur :
-
-        // - attaque en priorité le Pokémon dont l'affinité lui donne l'avantage
-        // - s'il n'y en a pas (ou s'il y en a plusieurs), il attaque le Pokémon qui possède le moins de points de vie (parmi ceux-ci).
-        // - s'il y en a encore plusieurs, il attaque l'un de ces Pokémon au hasard.
         ArrayList<Pokemon> strongPokemons = new ArrayList<Pokemon>();
         for(Pokemon enemyPokemon : pokemons)
         {
@@ -130,7 +106,7 @@ public class AI extends Player
         }
         if(strongPokemons.size() == 1)
         {
-            return strongPokemons.get(0);
+            return strongPokemons.getFirst();
         }
         else if(strongPokemons.size() > 1)
         {
